--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,4 @@
-streamlit==1.35.0 pandas==2.2.2 plotly==5.22.0 python-dateutil==2.8.2
+streamlit==1.35.0 
+pandas==2.2.2 
+plotly==5.22.0 
+python-dateutil==2.8.2
